--- a/Frontend/.eslintrc.json
+++ b/Frontend/.eslintrc.json
@@ -1,47 +1,137 @@
 {
-  "env": {
-    "browser": true,
-    "es2021": true,
-    "node": true
-  },
-  "extends": [
-    "eslint:recommended",
-    "plugin:react/recommended",
-    "plugin:jsx-a11y/recommended",
-    "airbnb",
-    "prettier"
-  ],
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
+    "root": true,
+    "env": {
+        "browser": true,
+        "es2020": true,
+        "node": true
     },
-    "ecmaVersion": 12,
-    "sourceType": "module"
-  },
-  "plugins": [
-    "react",
-    "jsx-a11y",
-    "prettier"
-  ],
-  "rules": {
-    "prettier/prettier": "error",
-    "react/react-in-jsx-scope": "off", // For React 17+ JSX transform
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-    "import/prefer-default-export": "off",
-    "no-unused-vars": "warn",
-    "no-console": "warn",
-    "react/prop-types": "off", // If using TypeScript or don't want prop-types
-    "jsx-a11y/anchor-is-valid": ["error", {
-        "components": ["Link"],
-        "specialLink": ["hrefLeft", "hrefRight"],
-        "aspects": ["invalidHref", "preferButton"]
-      }
+    "extends": [
+        "eslint:recommended",
+        "plugin:react/recommended",
+        "plugin:react/jsx-runtime",
+        "plugin:react-hooks/recommended",
+        "plugin:jsx-a11y/recommended",
+        "airbnb",
+        "prettier"
     ],
-    "react/function-component-definition": ["error", { "namedComponents": "arrow-function" }]
-  },
-  "settings": {
-    "react": {
-      "version": "detect"
+    "ignorePatterns": [
+        "dist",
+        ".eslintrc.cjs"
+    ],
+    "parserOptions": {
+        "ecmaVersion": "latest",
+        "sourceType": "module",
+        "ecmaFeatures": {
+            "jsx": true
+        }
+    },
+    "settings": {
+        "react": {
+            "version": "detect"
+        },
+        "import/resolver": {
+            "alias": {
+                "map": [
+                    [
+                        "@",
+                        "./src"
+                    ]
+                ],
+                "extensions": [
+                    ".js",
+                    ".jsx",
+                    ".json",
+                    ".ts",
+                    ".tsx"
+                ]
+            }
+        },
+        "jsx-a11y": {
+            "components": {
+                "Input": "input"
+            }
+        }
+    },
+    "plugins": [
+        "react-refresh",
+        "prettier"
+    ],
+    "rules": {
+        "prettier/prettier": "error",
+        "react-refresh/only-export-components": [
+            "warn",
+            {
+                "allowConstantExport": true
+            }
+        ],
+        "react/jsx-no-target-blank": "off",
+        "react/jsx-filename-extension": [
+            1,
+            {
+                "extensions": [
+                    ".js",
+                    ".jsx"
+                ]
+            }
+        ],
+        "import/prefer-default-export": "off",
+        "no-unused-vars": "warn",
+        "no-console": "warn",
+        "react/prop-types": "off",
+        "jsx-a11y/anchor-is-valid": [
+            "error",
+            {
+                "components": [
+                    "Link"
+                ],
+                "specialLink": [
+                    "hrefLeft",
+                    "hrefRight"
+                ],
+                "aspects": [
+                    "invalidHref",
+                    "preferButton"
+                ]
+            }
+        ],
+        "jsx-a11y/label-has-associated-control": [
+            "error", 
+            {
+                "labelComponents": [
+                    "CustomLabel"
+                ],
+                "labelAttributes": [
+                    "htmlFor"
+                ],
+                "controlComponents": [
+                    "Input"
+                ],
+                "depth": 3,
+                "assert": "htmlFor"
+            }
+        ],
+        "react/function-component-definition": [
+            "error",
+            {
+                "namedComponents": "arrow-function"
+            }
+        ],
+        "react/jsx-props-no-spreading": "off",
+        "import/no-unresolved": [
+            2,
+            {
+                "caseSensitive": true,
+                "commonjs": true,
+                "amd": false
+            }
+        ],
+        "import/extensions": [
+            2,
+            "never",
+            {
+                "jsx": "never",
+                "js": "never"
+            }
+        ]
     }
-  }
 }
