--- a/Frontend/.eslintrc.json
+++ b/Frontend/.eslintrc.json
@@ -1,137 +1,103 @@
 {
-    "root": true,
-    "env": {
-        "browser": true,
-        "es2020": true,
-        "node": true
-    },
-    "extends": [
-        "eslint:recommended",
-        "plugin:react/recommended",
-        "plugin:react/jsx-runtime",
-        "plugin:react-hooks/recommended",
-        "plugin:jsx-a11y/recommended",
-        "airbnb",
-        "prettier"
-    ],
-    "ignorePatterns": [
-        "dist",
-        ".eslintrc.cjs"
-    ],
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module",
-        "ecmaFeatures": {
-            "jsx": true
-        }
-    },
-    "settings": {
-        "react": {
-            "version": "detect"
-        },
-        "import/resolver": {
-            "alias": {
-                "map": [
-                    [
-                        "@",
-                        "./src"
-                    ]
-                ],
-                "extensions": [
-                    ".js",
-                    ".jsx",
-                    ".json",
-                    ".ts",
-                    ".tsx"
-                ]
-            }
-        },
-        "jsx-a11y": {
-            "components": {
-                "Input": "input"
-            }
-        }
-    },
-    "plugins": [
-        "react-refresh",
-        "prettier"
-    ],
-    "rules": {
-        "prettier/prettier": "error",
-        "react-refresh/only-export-components": [
-            "warn",
-            {
-                "allowConstantExport": true
-            }
-        ],
-        "react/jsx-no-target-blank": "off",
-        "react/jsx-filename-extension": [
-            1,
-            {
-                "extensions": [
-                    ".js",
-                    ".jsx"
-                ]
-            }
-        ],
-        "import/prefer-default-export": "off",
-        "no-unused-vars": "warn",
-        "no-console": "warn",
-        "react/prop-types": "off",
-        "jsx-a11y/anchor-is-valid": [
-            "error",
-            {
-                "components": [
-                    "Link"
-                ],
-                "specialLink": [
-                    "hrefLeft",
-                    "hrefRight"
-                ],
-                "aspects": [
-                    "invalidHref",
-                    "preferButton"
-                ]
-            }
-        ],
-        "jsx-a11y/label-has-associated-control": [
-            "error", 
-            {
-                "labelComponents": [
-                    "CustomLabel"
-                ],
-                "labelAttributes": [
-                    "htmlFor"
-                ],
-                "controlComponents": [
-                    "Input"
-                ],
-                "depth": 3,
-                "assert": "htmlFor"
-            }
-        ],
-        "react/function-component-definition": [
-            "error",
-            {
-                "namedComponents": "arrow-function"
-            }
-        ],
-        "react/jsx-props-no-spreading": "off",
-        "import/no-unresolved": [
-            2,
-            {
-                "caseSensitive": true,
-                "commonjs": true,
-                "amd": false
-            }
-        ],
-        "import/extensions": [
-            2,
-            "never",
-            {
-                "jsx": "never",
-                "js": "never"
-            }
-        ]
+  "root": true,
+  "env": {
+    "browser": true,
+    "es2020": true,
+    "node": true
+  },
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:react/jsx-runtime",
+    "plugin:react-hooks/recommended",
+    "plugin:jsx-a11y/recommended",
+    "airbnb",
+    "prettier"
+  ],
+  "ignorePatterns": ["dist", ".eslintrc.cjs"],
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
     }
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    },
+    "import/resolver": {
+      "alias": {
+        "map": [["@", "./src"]],
+        "extensions": [".js", ".jsx", ".json", ".ts", ".tsx"]
+      }
+    },
+    "jsx-a11y": {
+      "components": {
+        "Input": "input"
+      }
+    }
+  },
+  "plugins": ["react-refresh", "prettier"],
+  "rules": {
+    "prettier/prettier": "error",
+    "react-refresh/only-export-components": [
+      "warn",
+      {
+        "allowConstantExport": true
+      }
+    ],
+    "react/jsx-no-target-blank": "off",
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [".js", ".jsx"]
+      }
+    ],
+    "import/prefer-default-export": "off",
+    "no-unused-vars": "warn",
+    "no-console": "warn",
+    "react/prop-types": "off",
+    "jsx-a11y/anchor-is-valid": [
+      "error",
+      {
+        "components": ["Link"],
+        "specialLink": ["hrefLeft", "hrefRight"],
+        "aspects": ["invalidHref", "preferButton"]
+      }
+    ],
+    "jsx-a11y/label-has-associated-control": [
+      "error",
+      {
+        "labelComponents": ["CustomLabel"],
+        "labelAttributes": ["htmlFor"],
+        "controlComponents": ["Input"],
+        "depth": 3,
+        "assert": "htmlFor"
+      }
+    ],
+    "react/function-component-definition": [
+      "error",
+      {
+        "namedComponents": "arrow-function"
+      }
+    ],
+    "react/jsx-props-no-spreading": "off",
+    "import/no-unresolved": [
+      2,
+      {
+        "caseSensitive": true,
+        "commonjs": true,
+        "amd": false
+      }
+    ],
+    "import/extensions": [
+      2,
+      "never",
+      {
+        "jsx": "never",
+        "js": "never"
+      }
+    ]
+  }
 }
