--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@vitejs/plugin-react": "^4.0.3",
     "axios": "^1.4.0",
     "class-variance-authority": "^0.6.1",
     "clsx": "^2.1.1",
@@ -29,7 +30,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vite": "^6.3.5"
   },
   "devDependencies": {
     "@types/babel__core": "^7.20.5",
@@ -39,7 +41,6 @@
     "@types/estree": "^1.0.7",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.21",
     "eslint": "^8.57.1",
     "eslint-config-airbnb": "^19.0.4",
@@ -52,7 +53,6 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
-    "tailwindcss": "^3.4.3",
-    "vite": "^6.3.5"
+    "tailwindcss": "^3.4.3"
   }
 }
