--- a/.github/workflows/python-quality.yml
+++ b/.github/workflows/python-quality.yml
@@ -30,6 +30,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install -r requirements.txt
         pip install black flake8 isort mypy
       working-directory: Backend
 
@@ -46,5 +47,5 @@ jobs:
       working-directory: Backend
 
     - name: Run MyPy (Static Type Checker)
-      run: mypy .
+      run: mypy . --install-types --non-interactive
       working-directory: Backend
