--- a/Backend/env.example
+++ b/Backend/env.example
@@ -1,2 +1,3 @@
 OPENAI_API_KEY=your_openai_api_key_here
 DATABASE_URL=postgresql://postgres:password@localhost:5432/whiskey_db
+SECRET_KEY = "YOUR_SECRET_KEY_HERE" ; for database.py file and Backend/app/routers/auth.py
