--- a/Backend/pyproject.toml
+++ b/Backend/pyproject.toml
@@ -7,6 +7,7 @@ profile = "black"
 line_length = 88
 force_single_line = true
 known_third_party = ["fastapi", "sqlalchemy", "pydantic", "passlib", "jose"]
+skip_glob = ["**/venv/**"]
 
 [tool.mypy]
 python_version = "3.12"
@@ -14,3 +15,4 @@ warn_unused_configs = true
 warn_redundant_casts = true
 warn_unused_ignores = true
 disallow_untyped_defs = true
+exclude = "venv/|\\.venv/"
